fix some layout issues

--- a/styles/theme2/widescreen.less
+++ b/styles/theme2/widescreen.less
@@ -49,13 +49,16 @@ header {
   section {
     //padding: 2em;
     dl, menu, ol, ul {
-      position: relative; left: 2em;
+      //position: relative; left: 2em;
     }
 
     > article > figure:first-child, & > figure:first-child {
       float: left;
       margin-right: 1em;
+      margin-bottom: 1em;
     }
+    &, & > article { .clearfix(); }
+
     nav.destacados {
       max-width: 30em;
       margin: 0 auto;
